Fixed alignment in tables and added string when a deal hasn't got a created by name.

--- a/frontend/app/stylesheets/base/inputs.scss
+++ b/frontend/app/stylesheets/base/inputs.scss
@@ -218,5 +218,7 @@ $inline-editable-field-height: 30px;
         background: inherit;
         height: $inline-editable-field-height - 2;
         color: $lilyDarkBlue;
+        padding-top: 0;
+        line-height: 28px;
     }
 }
